search by week input number

--- a/src/app/components/tournament/item-tournament/item-tournament.component.html
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.html
@@ -83,13 +83,22 @@
             @if (matchesInTournament$ | async; as items) {
               <div class="one_col_container">
                 <form [formGroup]="formWeek" style="padding: 10px">
-                  <tui-input-number
-                    [tuiTextfieldCleaner]="true"
-                    formControlName="matchWeekSearch"
-                    (tuiValueChanges)="onSearchByWeek($event)"
-                  >
-                    Search by WEEK
-                  </tui-input-number>
+                  @if (getFormControl(formWeek, 'matchWeekSearch'); as control) {
+                    <app-simple-input-with-buttons
+                      [label]="'Search by WEEK'"
+                      [control]="control"
+                      [min]="1"
+                      [cleaner]="false"
+                      (tuiValueChanges)="onSearchByWeek($event)"
+                    ></app-simple-input-with-buttons>
+                  }
+                  <!--                  <tui-input-number-->
+                  <!--                    [tuiTextfieldCleaner]="true"-->
+                  <!--                    formControlName="matchWeekSearch"-->
+                  <!--                    (tuiValueChanges)="onSearchByWeek($event)"-->
+                  <!--                  >-->
+                  <!--                    Search by WEEK-->
+                  <!--                  </tui-input-number>-->
                 </form>
 
                 <app-base-search-form
