--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
@@ -48,7 +48,7 @@ label {
   grid-template-columns: 50px 40% 40%;
   grid-template-rows: auto;
   grid-gap: 10px;
-  justify-content: center;
+  justify-content: stretch;
   align-items: center;
   //padding: 10px;
 }
