--- a/src/app/shared/scoreboards/admin-forms/events-forms/events-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/events-forms/events-forms.component.html
@@ -36,6 +36,26 @@
               {{ qb.qb_stats!.run_yards / qb.qb_stats!.run_attempts | number:'1.0-1' }}
             } @else {
               0
+            })
+          </p>
+        }
+      }
+      @if (allOffenceTeamA$ | async; as offence) {
+        @for (player of offence; track player.match_player.id) {
+          <p>
+            {{ player.position?.title | uppercase }}:
+            #{{ player.match_player.match_number }}
+            {{ player.person?.first_name | titlecase }}
+            {{ player.person?.second_name | titlecase }}
+            (PASS ATT: {{ player.off_stats?.pass_attempts }}/{{ player.off_stats?.pass_received }},
+            PASS YDS: {{ player.off_stats?.pass_yards }},
+            RUN ATT: {{ player.off_stats?.run_attempts }},
+            RUN YDS: {{ player.off_stats?.run_yards }},
+            AVG RUN YDS:
+            @if (player.off_stats?.run_attempts && player.off_stats?.run_yards) {
+              {{ player.off_stats!.run_yards / player.off_stats!.run_attempts | number:'1.0-1' }}
+            } @else {
+              0
             }
           </p>
         }
