--- a/src/app/shared/scoreboards/admin-forms/events-forms/events-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/events-forms/events-forms.component.html
@@ -25,17 +25,17 @@
             (PASS ATT: {{ qb.qb_stats?.passes }}/{{ qb.qb_stats?.passes_completed }},
             PASS YDS: {{ qb.qb_stats?.pass_yards }},
             PASS%: @if (qb.qb_stats?.passes_completed && qb.qb_stats?.passes) {
-            {{ qb.qb_stats!.passes_completed / qb.qb_stats!.passes * 100 | number:'1.0-1' }}
+            {{ qb.qb_stats!.passes_completed / qb.qb_stats!.passes * 100 | number:'1.0-1' }},
           } @else {
-            0
+            0,
           }
             RUN ATT: {{ qb.qb_stats?.run_attempts }},
             RUN YDS: {{ qb.qb_stats?.run_yards }},
             AVG RUN YDS:
             @if (qb.qb_stats?.run_attempts && qb.qb_stats?.run_yards) {
-              {{ qb.qb_stats!.run_yards / qb.qb_stats!.run_attempts | number:'1.0-1' }}
+              {{ qb.qb_stats!.run_yards / qb.qb_stats!.run_attempts | number:'1.0-1' }},
             } @else {
-              0
+              0,
             })
           </p>
         }
@@ -49,14 +49,17 @@
             {{ player.person?.second_name | titlecase }}
             (PASS ATT: {{ player.off_stats?.pass_attempts }}/{{ player.off_stats?.pass_received }},
             PASS YDS: {{ player.off_stats?.pass_yards }},
+            PASS TD: {{ player.off_stats?.pass_td }},
             RUN ATT: {{ player.off_stats?.run_attempts }},
             RUN YDS: {{ player.off_stats?.run_yards }},
             AVG RUN YDS:
             @if (player.off_stats?.run_attempts && player.off_stats?.run_yards) {
-              {{ player.off_stats!.run_yards / player.off_stats!.run_attempts | number:'1.0-1' }}
+              {{ player.off_stats!.run_yards / player.off_stats!.run_attempts | number:'1.0-1' }},
             } @else {
-              0
+              0,
             }
+            RUN TD: {{ player.off_stats?.run_td }},
+            TD: {{ (player.off_stats?.pass_td ?? 0) + (player.off_stats?.run_td ?? 0) }})
           </p>
         }
       }
