--- a/src/app/shared/ui/events/football-stats/simple-football-qb-stats/simple-football-qb-stats.component.html
+++ b/src/app/shared/ui/events/football-stats/simple-football-qb-stats/simple-football-qb-stats.component.html
@@ -22,6 +22,8 @@
       } @else {
         0,
       }
+      INT: {{ qb.qb_stats?.interception }},
+      FUMBLE: {{ qb.qb_stats?.fumble }})
     </p>
   }
 }
