event football stats refactoring distance

--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -37,6 +37,9 @@
                     @if (getBallOn(eventsArray, i); as ballOn) {
                       <div class="event-short-view">BallOn: {{ ballOn }}&nbsp;</div>
                     }
+                    <div
+                      class="event-short-view">{{ getEventDown(eventsArray, i) }}&nbsp;&&nbsp;{{ getEventDistance(eventsArray, i) }}
+                    </div>
                     @if (getEventPlayType(eventsArray, i); as playType) {
                       <div class="event-short-view">{{ playType.value | uppercase }}&nbsp;</div>
                     }
