--- a/src/app/shared/ui/events/football-stats/simple-football-match-team-stats/simple-football-match-team-stats.component.html
+++ b/src/app/shared/ui/events/football-stats/simple-football-match-team-stats/simple-football-match-team-stats.component.html
@@ -1,6 +1,13 @@
-<p class="tui-text_h6">{{ teamTitle | uppercase }} STATS</p>
-<p>Offence Yards: {{ offenceDistance }}</p>
-<p>Run Yards: {{ runDistance }}</p>
-<p>Pass Yards: {{ passDistance }}</p>
-<p>Flag Yards: {{ flagYards }}</p>
+@if (teamWithStats) {
+  <p class="tui-text_h6">{{ teamWithStats.title | uppercase }} STATS</p>
+  <p>Offence Yards: {{ teamWithStats.match_stats?.offence_yards }}</p>
+  <p>Run Yards: {{ teamWithStats.match_stats?.run_yards }}</p>
+  <p>Pass Yards: {{ teamWithStats.match_stats?.pass_yards }}</p>
+  <p>Flag Yards: {{ teamWithStats.match_stats?.flag_yards }}</p>
+}
+<!--<p class="tui-text_h6">{{ teamTitle | uppercase }} STATS</p>-->
+<!--<p>Offence Yards: {{ offenceDistance }}</p>-->
+<!--<p>Run Yards: {{ runDistance }}</p>-->
+<!--<p>Pass Yards: {{ passDistance }}</p>-->
+<!--<p>Flag Yards: {{ flagYards }}</p>-->
 
