event football stats refactoring team down conv

--- a/src/app/shared/ui/events/football-stats/simple-football-match-team-stats/simple-football-match-team-stats.component.html
+++ b/src/app/shared/ui/events/football-stats/simple-football-match-team-stats/simple-football-match-team-stats.component.html
@@ -4,10 +4,9 @@
   <p>Run Yards: {{ teamWithStats.match_stats?.run_yards }}</p>
   <p>Pass Yards: {{ teamWithStats.match_stats?.pass_yards }}</p>
   <p>Flag Yards: {{ teamWithStats.match_stats?.flag_yards }}</p>
+  <p>3rd Down Conv: {{ teamWithStats.match_stats?.third_down_conversions }}
+    /&nbsp;{{ teamWithStats.match_stats?.third_down_attempts }}</p>
+  <p>4th Down Conv: {{ teamWithStats.match_stats?.fourth_down_conversions }}
+    /&nbsp;{{ teamWithStats.match_stats?.fourth_down_conversions }}</p>
 }
-<!--<p class="tui-text_h6">{{ teamTitle | uppercase }} STATS</p>-->
-<!--<p>Offence Yards: {{ offenceDistance }}</p>-->
-<!--<p>Run Yards: {{ runDistance }}</p>-->
-<!--<p>Pass Yards: {{ passDistance }}</p>-->
-<!--<p>Flag Yards: {{ flagYards }}</p>-->
 
