--- a/src/app/shared/ui/events/football-stats/simple-football-match-team-stats/simple-football-match-team-stats.component.html
+++ b/src/app/shared/ui/events/football-stats/simple-football-match-team-stats/simple-football-match-team-stats.component.html
@@ -4,6 +4,7 @@
   <p>Run Yards: {{ teamWithStats.match_stats?.run_yards }}</p>
   <p>Pass Yards: {{ teamWithStats.match_stats?.pass_yards }}</p>
   <p>Flag Yards: {{ teamWithStats.match_stats?.flag_yards }}</p>
+  <p>1st Down Gained: {{ teamWithStats.match_stats?.first_down_gained }}</p>
   <p>3rd Down Conv: {{ teamWithStats.match_stats?.third_down_conversions }}
     /&nbsp;{{ teamWithStats.match_stats?.third_down_attempts }}</p>
   <p>4th Down Conv: {{ teamWithStats.match_stats?.fourth_down_conversions }}
